--- a/style/style.scss
+++ b/style/style.scss
@@ -21,7 +21,7 @@
 @font-face {
   font-family: "Futura3";
   src: 
-    url("../fonts/fonts2/Futura\ Light\ font.ttf") format("truetype");
+    url("../fonts/fonts2/futura\ light\ bt.ttf") format("truetype");
   font-style: normal;
   font-family: 300;
   font-display: swap;
